# deskmaid

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  _build.py  cleaner.py  config.yml  conftest.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  references.doctree
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
_modules/: index.html
_modules/deskmaid/: cli.html  deskmaid.html
deskmaid/: __init__.py  __main__.py  cli.py  config.py  deskmaid.py  file.py  i18n.py  info.py  py.typed
deskmaid/config/: config.yml
deskmaid/configs/: config.yml
deskmaid/locale/: messages.pot
deskmaid/locale/en/LC_MESSAGES/: messages.po
deskmaid/locale/fr/LC_MESSAGES/: messages.po
deskmaid/scripts/: deskmaid.cmd
docs/: conf.py  index.rst  references.rst
tests/: test_cli.py  test_deskmaid.py  test_i18n.py  utils.py
